--- a/language/Lithuanian/strings.po
+++ b/language/Lithuanian/strings.po
@@ -104,6 +104,10 @@ msgctxt "#709"
 msgid "709"
 msgstr "709"
 
+msgctxt "#710"
+msgid "Configure the Hostname of your @DISTRONAME@ system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
+msgstr "Nustatykite savo @DISTRONAME@ sistemos kompiuterio vardą. Jis bus naudojamas kaip HTPC \\\\hostname Windows sistemoje ir SMB serverio vardas Mac OS Finder programoje"
+
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
 msgstr "Konfigūruoti 1-os klaviatūros programinės įrangos išdėstymą"
@@ -116,6 +120,10 @@ msgctxt "#713"
 msgid "Configure the physical keyboard type"
 msgstr "Konfigūruoti fizinės klaviatūros tipą"
 
+msgctxt "#714"
+msgid "@DISTRONAME@ can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
+msgstr "@DISTRONAME@ gali būti atnaujinamas automatiniu arba rankiniu būdu. Automatiniai atnaujinimai galimi stabiliems leidimams ir stabilioms kandidatinėms versijoms. Automatiniai atnaujinimai išjungiami beta ir kūrimo versijoms"
+
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "Įjunkite ir ekrane bus rodomas pranešimas, kai bus prieinamas naujas atnaujinimas"
@@ -123,6 +131,14 @@ msgstr "Įjunkite ir ekrane bus rodomas pranešimas, kai bus prieinamas naujas a
 msgctxt "#716"
 msgid "Click to manually check the @DISTRONAME@ servers for an updated release"
 msgstr "Paspauskite, jei norite patikrinti ar yra atnaujintas leidimas @DISTRONAME@ serveriuose"
+
+msgctxt "#717"
+msgid "If you have an small LCD or VFD attached to your @DISTRONAME@ system you must configure the correct display driver"
+msgstr "Jei turite prijungtą mažą LCD ar VFD prie savi @DISTRONAME@ sistemos, jums reikia nustatyti teisingas vaizdo tvarkykles"
+
+msgctxt "#718"
+msgid "Set on ON and @DISTRONAME@ will spin down attached drives (not the main system drive) when idle"
+msgstr "Nustatykite ĮJUNGTA ir @DISTRONAME@ sustabdys prijungtus diskus (ne pagrindinį sistemos diską), kai jie nenaudojami"
 
 msgctxt "#719"
 msgid "Configure the number of minutes before hard-drive spin down occurs"
@@ -136,9 +152,21 @@ msgctxt "#721"
 msgid "721"
 msgstr "721"
 
+msgctxt "#722"
+msgid "Create a tar archive containing all @DISTRONAME@ and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
+msgstr "Sukurkite tar archyvą su visais @DISTRONAME@ ir Kodi konfigūracijos nustatymais, duomenų bazėmis ir miniatiūromis. Atsarginės kopijos failai bus saugomi /storage/backups aplanke"
+
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Atstatyti *.tar archyvo atsarginę kopiją, sukurtą naudojant aukščiau esančią atsarginės kopijos parinktį"
+
+msgctxt "#724"
+msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset @DISTRONAME@ configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
+msgstr "[COLOR FF00FF00]PROGRAMINIS ATSTATYMAS[/COLOR]\nNegrįžtamai atstatyti @DISTRONAME@ konfigūracijos numatytąsias reikšmes (taip pat atstato ir Kodi numatytąsias reikšmes, įskaitant biblioteką, media įrašai - muzika/vaizdo įrašai/kt. nebus paliesti)"
+
+msgctxt "#725"
+msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset @DISTRONAME@ and Kodi configuration to defaults (everything in your storage partition will be deleted)"
+msgstr "[COLOR FFFF0000]APARATINIS ATSTATYMAS[/COLOR]\nNegrįžtamai atstatyti @DISTRONAME@ ir Kodi konfigūracijos numatytąsias reikšmes (viskas jūsų saugyklos skirsnyje bus ištrinta)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -200,6 +228,10 @@ msgctxt "#741"
 msgid "Set the password for Samba sharing"
 msgstr "Nustatykite slaptažodį Samba bendrinimui"
 
+msgctxt "#742"
+msgid "Set to ON to enable the embedded SSH server. The SSH console can be accessed with username 'root' and password '@ROOT_PASSWORD@'."
+msgstr "Nustatykite ĮJUNGTA, norėdami įgalinti vidinį SSH serverį. SSH konsolę galite pasiekti su vartotojo vardu 'root' ir slaptažodžiu '@ROOT_PASSWORD@'."
+
 msgctxt "#743"
 msgid "Set to ON if you have copied private SSH keys to your HTPC and would like to improve security by disabling SSH username and password authentication."
 msgstr "Nustatykite ĮJUNGTA, jei nukopijavote SSH raktus į jūsų HTPC ir norite pagerinti saugumą išjungiant SSH vartotojo vardo ir slaptažodžio autentikaciją."
@@ -231,6 +263,10 @@ msgstr "749"
 msgctxt "#750"
 msgid "750"
 msgstr "750"
+
+msgctxt "#751"
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to @DISTRONAME@."
+msgstr "Su OBEX filetransfer galite siųsti failus, pvz., filmus ar nuotraukas, per bluetooth į @DISTRONAME@."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -780,13 +816,25 @@ msgctxt "#32301"
 msgid "Welcome"
 msgstr "Sveiki"
 
+msgctxt "#32302"
+msgid "This wizard will guide you through the process of setting up your new @DISTRONAME@ installation - setting your location, timezone and connecting you to the internet.[CR][CR]These settings can be changed later by navigating to Programs > @DISTRONAME@ Settings.[CR][CR]To begin your @DISTRONAME@ experience, select your regional settings and your keyboard layout, then click Next."
+msgstr "Šis vedlys padės jums pereiti @DISTRONAME@ nustatymo procesą - nustatant jūsų vietą, laiko juostą ir prijungiant jus prie interneto.[CR][CR]Šie nustatymai gali būti pakeisti vėliau, nuėjus į Programos > @DISTRONAME@ nustatymai.[CR][CR]Norėdami pradėti naudoti @DISTRONAME@, pasirinkite regioninius nustatymus bei klaviatūros išdėstymą ir spauskite 'Kitas'."
+
 msgctxt "#32303"
 msgid "Next"
 msgstr "Kitas"
 
+msgctxt "#32304"
+msgid "To be identified easily on the network, your new @DISTRONAME@ machine needs a name.[CR][CR]Try to choose something meaningful - like the room it's in - so you'll know what it is when you see it on the network.[CR][CR]This name is used when configuring network services, like file sharing using samba."
+msgstr "Kad būtų lengvai atpažįstama tinkle, jūsų @DISTRONAME@ sistemai reikalingas vardas.[CR][CR]Pasistenkite parinkti ką nors prasmingo - kaip, pavyzdžiui, kambarys kuriame ji yra - taip lengviau suprasite kas tai yra, kai pamatysite šį vardą tinkle.[CR][CR]Šis vardas naudojamas konfigūruojant tinklo paslaugas, tokias kaip bendrinimas naudojant samba."
+
 msgctxt "#32305"
 msgid "Networking"
 msgstr "Tinklas"
+
+msgctxt "#32306"
+msgid "In order to download backdrops, banners and thumbnails for your movies and TV shows and to stream online content from sites like YouTube, @DISTRONAME@ needs to be connected the Internet.[CR][CR]An Internet connection is also required for @DISTRONAME@ to automatically update itself."
+msgstr "Norint atsisiųsti foninius atvaizdus, reklamjuostes ir miniatiūras filmams ir TV laidoms bei priimti turinio transliacijas iš internetinių svetainių, tokių kaip YouTube, @DISTRONAME@ turi būti prijungtas prie interneto.[CR][CR]Interneto prisijungimas taip pat reikalingas, kad @DISTRONAME@ galėtų automatiškai atsinaujinti."
 
 msgctxt "#32307"
 msgid "Select your Regional Settings:"
@@ -808,6 +856,14 @@ msgctxt "#32311"
 msgid "Sharing and Remote Access"
 msgstr "Bendrinimas ir nuotolinė prieiga"
 
+msgctxt "#32312"
+msgid "@DISTRONAME@ also supports SSH for remote access. This is for advanced users who wish to interact with @DISTRONAME@'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]@ROOT_PASSWORD@[/COLOR]."
+msgstr "@DISTRONAME@ taip pat palaiko SSH nuotolinei prieigai. Tai skirta pažengusiems vartotojams, kurie nori valdyti  @DISTRONAME@ pagrindą sudarančią operacinę sistemą. Numatytasis vartotojo vardas yra [COLOR blue]root[/COLOR], slaptažodis - [COLOR blue]@ROOT_PASSWORD@[/COLOR]."
+
+msgctxt "#32313"
+msgid "In order to share your files between your computers @DISTRONAME@ has incorporated a samba server. This samba server can be integrated into your local network by accessing it in a familiar way with Finder or Windows Explorer."
+msgstr "Kad būtų galima bendrinti failus tarp kompiuterių, @DISTRONAME@ turi įdiegtą samba serverį. Samba serveris gali būti integruotas į jūsų vietinį tinklą, pasiekiant jį įprastu būdu, naudojant Finder ar Windows Explorer."
+
 msgctxt "#32314"
 msgid "enabled"
 msgstr "įjungta"
@@ -823,6 +879,10 @@ msgstr "Konfigūruoti paslaugas:"
 msgctxt "#32317"
 msgid "Thank you"
 msgstr "Ačiū"
+
+msgctxt "#32318"
+msgid "Your @DISTRONAME@ installation is now complete and you'll now enter Kodi when you can set up your media libraries. For help with this, there is a guide available at wiki.kodi.tv[CR][CR]@DISTRONAME@ is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find @DISTRONAME@ useful, we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using @DISTRONAME@ as much as we've enjoying building it. If you need any more help, you can find links to get help along with latest news at our website"
+msgstr "@DISTRONAME@ diegimas baigtas ir dabar bus paleistas Kodi, kur galėsite nustatyti savo media bibliotekas. Jei jums pagalbos tai atliekant, wiki.kodi.tv galite rasti gidą[CR][CR]@DISTRONAME@ yra sukurtas specialios kūrėjų komandos, kurie dirba tik savo laisvu laiku. Net ir kaip savanoriškas projektas, mes vis tiek turime mokėti už mūsų interneto srautą ir kūrimo resursus tam, kad @DISTRONAME@ būtų jums naudingas, todėl mes visada dėkingi už bet kokio dydžio auką.[CR][CR]Ir galiausiai, mes tikimės, kad taip mėgaujatės naudodami @DISTRONAME@, kaip mes mėgaujamės jį kurdami. Jei jums reikia kokios nors pagalbos, mūsų interneto svetainėje galite rasti nuorodas, kur gauti pagalbos, o taip pat sužinosite naujausias žinias."
 
 msgctxt "#32319"
 msgid "Cron"
